Fix an issue with split nav overlapping

--- a/assets/sass/components/_navigation.scss
+++ b/assets/sass/components/_navigation.scss
@@ -152,11 +152,14 @@
         }
     }
     .split-nav__prev {
+        margin-right: $spacingUnit;
         &::before {
             content: '← ';
         }
     }
     .split-nav__next {
+        margin-left: $spacingUnit;
+        text-align: right;
         &::after {
             content: ' →';
         }
